Fixed margin on mobile for main content

--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@ a .button {
   }
 
   .main-content {
-    padding: 9em 0 0 0;
+    padding: 9.5em 0 0 0;
   }
 
   .logo {
